--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Affiliates"
 email: wowthemesnet@gmail.com
 timezone: UTC
-baseurl: "/affiliates-jekyll-theme"
+baseurl: "/blog"
 permalink: "/:title/"
 logo: 'assets/images/researca.svg'
 favicon: 'assets/images/favicon.ico'
