--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: "Affiliates"
+title: "Researca | Blog"
 email: wowthemesnet@gmail.com
 timezone: UTC
 baseurl: "/blog"
 permalink: "/:title/"
 logo: 'assets/images/researca.svg'
 favicon: 'assets/images/favicon.ico'
-author: Sal
+author: Constant
 paginate: 30
 disqus: 'demowebsite'
 locale: en_us
@@ -25,22 +25,14 @@ ganalytics: UA-113961478-1
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
+  constant:
+    name: Constant
+    display_name: Constant
     avatar: 'assets/images/sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John
-    avatar: 'assets/images/john.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
+    email: contact@researca.com
+    web: https://telary.io
+    twitter: https://twitter.com/researca
+    description: "Developper of Researca"
 
 # Social
 social:
