--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ social:
   instagram: https://www.instagram.com/bootstrapstarter/
   facebook: https://www.facebook.com/bootstrapstartercom-346329609045284
   twitter: https://twitter.com/bstartercom
+  reddit: https://reddit.com/r/researca
 
 # Plugins
 plugins: 
