Firs real articles are published

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -21,8 +21,8 @@ footermenu:
 - title: Home
   url: ""
 
-- title: Privacy Policy
-  url: "privacy-policy/"
+- title: Legal
+  url: "legal/"
 
 - title: Contact
   url: "contact/"
